--- a/product-card-component/css/product-card-component.css
+++ b/product-card-component/css/product-card-component.css
@@ -78,12 +78,22 @@ body {
 button {
   margin-top: 30px;
   width: 100%;
-  height: 50px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--White);
   font-weight: 700;
   border: none;
   border-radius: 10px;
   background-color: var(--DarkCyan);
+}
+button .svg {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+  filter: invert(88%) sepia(100%) saturate(21%) hue-rotate(293deg)
+    brightness(106%) contrast(107%);
 }
 .attribution {
   font-size: 11px;
