--- a/product-card-component/css/product-card-component.css
+++ b/product-card-component/css/product-card-component.css
@@ -32,6 +32,22 @@ body {
   border-radius: 10px;
   background-color: #fff;
 }
+@media (min-width: 576px) {
+  .card-container {
+    width: 65%;
+  }
+}
+@media (min-width: 768px) {
+  .card-container {
+    width: 50%;
+  }
+}
+@media (min-width:992px)
+.card-container{
+  width: 70%;
+}
+  
+}
 .card-container img {
   width: 100%;
   height: 100%;
