--- a/product-card-component/css/product-card-component.css
+++ b/product-card-component/css/product-card-component.css
@@ -31,6 +31,8 @@ body {
   margin: 15px auto;
   border-radius: 10px;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 @media (min-width: 576px) {
   .card-container {
@@ -42,11 +44,11 @@ body {
     width: 50%;
   }
 }
-@media (min-width:992px)
-.card-container{
-  width: 70%;
-}
-  
+@media (min-width: 992px) {
+  .card-container {
+    width: 70%;
+    flex-direction: row;
+  }
 }
 .card-container img {
   width: 100%;
