--- a/product-card-component/css/product-card-component.css
+++ b/product-card-component/css/product-card-component.css
@@ -17,10 +17,10 @@
 
 /* MAIN STYLES */
 body {
-  background-color: var(--Cream);
   font-size: 14px;
   font-family: var(--Montserrat);
   color: var(--DarkGrayishBlue);
+  background-color: var(--Cream);
 }
 
 /* CARD CONTAINER */
@@ -44,16 +44,37 @@ body {
     width: 50%;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .card-container {
     width: 70%;
     flex-direction: row;
   }
 }
-.card-container img {
+@media (min-width: 992px) {
+  .card-container {
+    width: 40%;
+    height: 65vh;
+  }
+}
+.card-container .card-img-col {
   width: 100%;
   height: 100%;
   border-radius: 10px 10px 0 0;
+}
+@media (min-width: 768px) {
+  .card-container .card-img-col {
+    display: none;
+  }
+}
+.card-container .card-img-row {
+  display: none;
+}
+@media (min-width: 768px) {
+  .card-container .card-img-row {
+    display: block;
+    width: 50%;
+    border-radius: 10px 0 0 10px;
+  }
 }
 .card-container .card-parragraph {
   padding: 20px;
