--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   /* Colors */
   --primaryBG: #6e6e6e;
   --hover-font: #fa4529;
+  --blueBG: #3e54a3;
 
   /* Fonts */
   --arimo-ff: "Arimo", sans-serif;
@@ -23,6 +24,7 @@ body {
 /* GENERAL */
 .container {
   width: 90%;
+  min-width: 375px;
   margin: 0 auto;
   border: 1px solid orangered;
 }
@@ -40,8 +42,14 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.header #btn-menu {
+  /* display: none; */
+}
+.header #btn-menu:checked ~ nav {
+  margin-left: 0;
+}
 .header .logo-mobile img {
-  width: 60%;
+  width: 50%;
 }
 .header .logo-mobile span {
   margin-top: 10px;
@@ -54,6 +62,25 @@ body {
 }
 
 /* NAVBAR */
+nav {
+  margin-left: -110%;
+}
 .navbar {
   width: 100%;
+  height: 100%;
+  padding-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  transition: 500ms;
+  background-color: var(--blueBG);
+}
+.navbar a {
+  color: white;
+  font-family: var(--cabin-ff);
+  font-weight: 600;
+  font-size: 2.5rem;
+  text-align: center;
 }
