--- a/css/index.css
+++ b/css/index.css
@@ -126,7 +126,7 @@ body {
 }
 
 /***** MAIN *****/
-/* Hero Container */
+/* Hero Section */
 .hero {
   display: flex;
   flex-direction: column;
@@ -188,4 +188,16 @@ body {
   .hero img {
     width: 15%;
   }
+}
+
+/* Projects Section */
+.projects a {
+  text-indent: 1rem;
+  background-color: #ccc;
+  display: inline-flex;
+  flex: 1 1 20%;
+  align-self: stretch;
+  align-items: center;
+  text-decoration: none;
+  transition: box-shadow 1s;
 }
