--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,28 @@
 :root {
   /* Colors */
-  --primaryBG: #dedede;
   --blueBG: #3e54a3;
   --hover-font: #fa4529;
 
-  /* Fonts */
-  --arimo-ff: "Arimo", sans-serif;
-  --amiri-ff: "Amiri", serif;
-  --cabin-ff: "Cabin", sans-serif;
-  --martelSans-ff: "Martel Sans", sans-serif;
+  /* Background Colors */
+  --primaryBG: #403f65;
+  --secondaryBG: #84bbe4;
+  --tertiaryBG: #d2ecfe;
+  --alternateBG: #edce74;
+
+  /* Font Colors */
+  --primaryTextColor: #222;
+  --secondaryTextColor: #eee;
+
+  /* Typograpy */
+  /* --title-1: "Amiri", serif; */
+  --title-1: "Arimo", serif;
+
+  --title-2: "Cabin", sans-serif;
+  --body-text: "Martel Sans", sans-serif;
+
+  /* Custom Colors */
 }
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -20,7 +33,7 @@ html {
 }
 body {
   font-size: 1.6rem;
-  font-family: var(--martelSans-ff);
+  font-family: var(--body-text);
 }
 
 /* GENERAL */
@@ -52,7 +65,7 @@ body {
   display: none;
 }
 .header #btn-menu:checked ~ .navbar {
-  margin-left: -6%;
+  margin-left: -10%;
 }
 .header .logo-mobile {
   display: flex;
@@ -66,7 +79,7 @@ body {
 .header .logo-mobile span {
   margin-top: 10px;
   color: var(--blueBG);
-  font-family: var(--arimo-ff);
+  font-family: var(--title-1);
   font-weight: 800;
   text-transform: uppercase;
 }
@@ -88,7 +101,7 @@ body {
 .navbar {
   width: 110%;
   height: 75%;
-  margin-left: -115%;
+  margin-left: -120%;
   padding-top: 15px;
   display: flex;
   flex-direction: column;
@@ -110,7 +123,7 @@ body {
 }
 .navbar a {
   color: white;
-  font-family: var(--cabin-ff);
+  font-family: var(--title-2);
   font-weight: 600;
   font-size: 2.5rem;
   text-align: center;
@@ -118,7 +131,6 @@ body {
 }
 @media (min-width: 992px) {
   .navbar a {
-    /* color: #3e54a3; */
     color: #000;
   }
 }
@@ -128,16 +140,15 @@ body {
 .hero {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
 
 .hero-title {
-  max-width: 600px;
+  max-width: 700px;
   margin-top: 6rem;
   display: block;
-  font-family: var(--amiri-ff);
-  font-size: 4.5rem;
+  font-family: var(--title-1);
+  font-size: 4rem;
   line-height: 6rem;
   text-align: center;
   letter-spacing: -0.04rem;
@@ -145,7 +156,7 @@ body {
 @media (min-width: 576px) {
   .hero-title {
     font-size: 5rem;
-    letter-spacing: 0.04rem;
+    letter-spacing: 0.03rem;
   }
 }
 @media (min-width: 768px) {
@@ -185,32 +196,64 @@ body {
 /* Practice Section */
 #practice {
   margin-top: 6rem;
-  padding: 3rem;
+  padding: 3rem 0;
   text-align: center;
-  background-color: var(--primaryBG);
-  border: 1px solid white;
+  background-color: var(--secondaryBG);
 }
 #practice > p {
-  font-family: var(--cabin-ff);
+  font-family: var(--title-1);
   font-size: 4rem;
 }
 .card {
-  margin-top: 3rem;
-  height: 300px;
+  height: 40rem;
+  margin-top: 2rem;
+  flex: 1 1 auto;
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 576px) {
+  .card {
+    height: 45rem;
+  }
+}
+@media (min-width: 768px) {
+  .card {
+    flex: 0.2 1 300px;
+  }
+}
+@media (min-width: 992px) {
+  .card {
+    flex: 0.3 1 375px;
+  }
+}
+@media (min-width: 1200px) {
+  .card {
+    flex: 0.45 1 375px;
+  }
 }
 .card img {
   width: 100%;
+  border-radius: 1rem 1rem 0 0;
 }
+.card .text {
+  margin: 2rem;
+}
+.card .text span {
+  font-family: var(--title-2);
+  font-weight: 600;
+  font-size: 2rem;
+}
+.card .text p {
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  line-height: 1.7;
+  text-align: justify;
+}
+
 /* FLEXBOX - WRAPPER */
 .flex-wrapper {
-  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap;
-  border: 1px solid red;
-}
-.flex-wrapper .projects {
-  flex: 1 1 375px;
-  border: 1px solid green;
 }
