--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,6 @@
   /* Typograpy */
   /* --title-1: "Amiri", serif; */
   --title-1: "Arimo", serif;
-
   --title-2: "Cabin", sans-serif;
   --body-text: "Martel Sans", sans-serif;
 
@@ -77,7 +76,7 @@ body {
   width: 50%;
 }
 .header .logo-mobile span {
-  margin-top: 10px;
+  margin-top: 1rem;
   color: var(--blueBG);
   font-family: var(--title-1);
   font-weight: 800;
@@ -194,33 +193,40 @@ body {
 }
 
 /* Practice Section */
-#practicas {
+#practicas,
+#ejercicios {
   margin-top: 6rem;
   padding: 3rem 0;
   text-align: center;
+}
+.secondary-bg {
   background-color: var(--secondaryBG);
 }
-#practicas,
+#practicas > p,
 #ejercicios > p {
   font-family: var(--title-1);
   font-size: 4rem;
 }
+#practicas > h2,
+#ejercicios > h2 {
+  margin-top: 5rem;
+  font-family: var(--title-2);
+  font-size: 2.3rem;
+}
+
 .card {
-  height: 40rem;
+  max-width: 40rem;
+  height: 35rem;
   margin-top: 2rem;
   flex: 1 1 auto;
   border-radius: 1rem;
   background-color: #fff;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.5);
 }
-@media (min-width: 576px) {
-  .card {
-    height: 45rem;
-  }
-}
+
 @media (min-width: 768px) {
   .card {
-    flex: 0.2 1 30rem;
+    flex: 0.4 1 25rem;
   }
 }
 @media (min-width: 992px) {
@@ -238,7 +244,8 @@ body {
   border-radius: 1rem 1rem 0 0;
 }
 .card .text {
-  margin: 0 2rem 1rem 2rem;
+  margin: 0rem 2rem 1rem 2rem;
+  padding-top: 1.5rem;
 }
 .card .text span {
   font-family: var(--title-2);
@@ -253,14 +260,15 @@ body {
 }
 
 /* Ejercicios en Clase */
-#ejercicios {
-  margin-top: 6rem;
-  padding: 3rem 0;
-  text-align: center;
-}
+
 /* FLEXBOX - WRAPPER */
 .flex-wrapper {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+@media (min-width: 992px) {
+  .flex-wrapper {
+    max-width: 65%;
+  }
 }
