--- a/css/index.css
+++ b/css/index.css
@@ -1,58 +1,25 @@
 :root {
   /* Colors */
-  --primary-color: #3e54a3;
-  --secondary-color: #fa4529;
-  --tertiary-color: #ddd;
-  --alternate-color: #aaa;
+  --blueBG: #3e54a3;
+  --hover-font: #fa4529;
 
   /* Background Colors */
-  --primaryBG: #403f65;
+  --primaryBG: #020727;
   --secondaryBG: #84bbe4;
+  --tertiaryBG: #d2ecfe;
+  --alternateBG: #edce74;
 
   /* Font Colors */
-  --primary-text-color: #222;
-  --secondary-text-color: #eee;
-
-  /* Button Colors */
-  --primary-btn-color: #111;
-  --secondary-btn-color: #222;
-
-  /* Fonts Family */
-  --primary-family: "Libre Franklin", sans-serif;
-  --secondary-family: "Martel", serif;
-  --tertiary-family: "Yantramanav", sans-serif;
+  --primaryTextColor: #222;
+  --secondaryTextColor: #eee;
 
   /* Typograpy */
-  --title-1-fw: 600;
-  --title-1-fs: 2.4rem;
-  --title-1-ls: 1;
-  --title-1-fc: var(--primary-text-color);
-  --title-1-ff: var(--primary-family);
-  --title-2-fw: 600;
-  --title-2-fs: 2.2rem;
-  --title-2-ls: 1;
-  --title-2-fc: var(--primary-text-color);
-  --title-2-ff: var(--primary-family);
-  --title-3-fw: 600;
-  --title-3-fs: 2rem;
-  --title-3-ls: 1;
-  --title-3-fc: var(--primary-text-color);
-  --title-3-ff: var(--primary-family);
-  --subtitle-1-fw: 600;
-  --subtitle-1-fs: 1.8rem;
-  --subtitle-1-ls: 1;
-  --subtitle-1-fc: var(--primary-text-color);
-  --subtitle-1-ff: var(--secondary-family);
-  --subtitle-2-fw: 600;
-  --subtitle-2-fs: 1.6rem;
-  --subtitle-2-ls: 1;
-  --subtitle-2-fc: var(--primary-text-color);
-  --subtitle-2-ff: var(--secondary-family);
-  --body-text-fw: ;
-  --body-text-fs: 1.4rem;
-  --body-text-ls: 1;
-  --body-text-fc: var(--primary-text-color);
-  --body-text-ff: var(--tertiary-family);
+  /* --title-1: "Amiri", serif; */
+  --title-1: "Arimo", serif;
+  --title-2: "Cabin", sans-serif;
+  --body-text: "Martel Sans", sans-serif;
+
+  /* Custom Colors */
 }
 
 * {
@@ -64,8 +31,8 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-size: var(--body-text-fs);
-  font-family: var(--body-text-ff);
+  font-size: 1.6rem;
+  font-family: var(--body-text);
 }
 
 /* GENERAL */
@@ -79,57 +46,277 @@ body {
     width: 80%;
   }
 }
-@media (min-width: 768px) {
-}
-@media (min-width: 992px) {
-}
-@media (min-width: 1200px) {
-}
-@media (min-width: 1400px) {
-}
 
 /* HEADER */
-header {
-  height: 5.5rem;
+.header .logo-container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  background-color: var(--primaryBG);
+  justify-content: space-between;
+  align-items: center;
 }
-header .btnmenu {
-  flex: 0.5 1 1rem;
-  position: static;
+
+@media (min-width: 992px) {
+  .header .logo-container label {
+    display: none;
+  }
 }
-header .btnmenu svg {
-  transition: 500ms;
-}
-header .btnmenu input:checked ~ nav {
-  top: 5.5rem;
-  background-color: white;
-}
-header .btnmenu input {
+.header #btn-menu {
   display: none;
 }
-header .btnmenu input:checked ~ label svg {
-  transform: rotate(90deg);
+.header #btn-menu:checked ~ .navbar {
+  margin-left: -10%;
 }
-header nav {
-  width: 100%;
-  flex: 2 1 50rem;
+.header .logo-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header .logo-mobile img {
+  width: 50%;
+}
+.header .logo-mobile span {
+  margin-top: 1rem;
+  color: var(--blueBG);
+  font-family: var(--title-1);
+  font-weight: 800;
+  text-transform: uppercase;
+}
+@media (min-width: 992px) {
+  .header .logo-mobile {
+    display: none;
+  }
+}
+.header .logo-desktop {
+  display: none;
+}
+@media (min-width: 992px) {
+  .header .logo-desktop {
+    display: block;
+  }
+}
+
+/* NAVBAR */
+.navbar {
+  width: 110%;
+  height: 75%;
+  margin-left: -120%;
+  padding-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   position: absolute;
-  top: -100%;
+  top: 110px;
   transition: 300ms;
-  box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.502);
+  background-color: var(--blueBG);
 }
-header nav ul {
-  height: 18rem;
+
+@media (min-width: 992px) {
+  .navbar {
+    width: 50%;
+    flex-direction: row;
+    position: static;
+    background-color: #fff;
+  }
+}
+.navbar a {
+  color: white;
+  font-family: var(--title-2);
+  font-weight: 600;
+  font-size: 2.5rem;
+  text-align: center;
+  text-decoration: none;
+}
+@media (min-width: 992px) {
+  .navbar a {
+    color: #000;
+    font-size: 2rem;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar a {
+    font-size: 2.3rem;
+  }
+}
+
+/***** MAIN *****/
+/* Hero Section */
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero-title {
+  max-width: 700px;
+  margin-top: 6rem;
+  display: block;
+  font-family: var(--title-1);
+  font-size: 4rem;
+  line-height: 6rem;
+  text-align: center;
+  letter-spacing: -0.04rem;
+}
+@media (min-width: 576px) {
+  .hero-title {
+    font-size: 5rem;
+    letter-spacing: 0.03rem;
+  }
+}
+@media (min-width: 768px) {
+  .hero-title {
+    margin-top: 3rem;
+    font-size: 6.5rem;
+    line-height: 8rem;
+    letter-spacing: 0.06rem;
+  }
+}
+.hero img {
+  width: 40%;
+  margin-top: 5rem;
+  border-radius: 100%;
+}
+@media (min-width: 576px) {
+  .hero img {
+    width: 35%;
+  }
+}
+@media (min-width: 768px) {
+  .hero img {
+    width: 30%;
+  }
+}
+@media (min-width: 992px) {
+  .hero img {
+    width: 20%;
+  }
+}
+@media (min-width: 1200px) {
+  .hero img {
+    width: 15%;
+  }
+}
+
+/* Practice Section */
+#newbie,
+#ejercicios {
+  margin-top: 6rem;
+  padding: 3rem 0;
   text-align: center;
 }
-header nav li {
-  padding: 2rem;
+.secondary-bg {
+  background-color: var(--secondaryBG);
 }
-header nav a {
-  font-family: var(--title-2-ff);
-  font-weight: var(--title-2-fw);
-  font-size: var(--title-2-fs);
-  text-align: center;
+#newbie > p,
+#ejercicios > p {
+  font-family: var(--title-1);
+  font-size: 4rem;
+}
+#newbie > h2,
+#ejercicios > h2 {
+  margin-top: 5rem;
+  font-family: var(--title-2);
+  font-size: 2.3rem;
+}
+
+.card {
+  max-width: 40rem;
+  height: 35rem;
+  margin-top: 2rem;
+  flex: 1 1 auto;
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 576px) {
+  .card {
+    flex: 0.4 1 20rem;
+  }
+}
+@media (min-width: 768px) {
+  .card {
+    flex: 0.4 1 25rem;
+  }
+}
+@media (min-width: 992px) {
+  .card {
+    /* flex: 0.3 1 37.5rem; */
+    flex: 0.3 1 37.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .card {
+    flex: 0.45 1 37.5rem;
+  }
+}
+.card img {
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
+}
+.card .text {
+  margin: 0rem 2rem 1rem 2rem;
+  padding-top: 1.5rem;
+}
+.card .text span {
+  font-family: var(--title-2);
+  font-weight: 600;
+  font-size: 2rem;
+}
+.card .text p {
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  line-height: 1.7;
+  text-align: justify;
+}
+
+/* Ejercicios en Clase */
+
+/* FLEXBOX - WRAPPER */
+.flex-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media (min-width: 992px) {
+  .flex-wrapper {
+    max-width: 80%;
+  }
+}
+@media (min-width: 1200px) {
+  .flex-wrapper {
+    max-width: 65%;
+  }
+}
+@media (min-width: 1400px) {
+  .flex-wrapper {
+    max-width: 55%;
+  }
+}
+
+/* FOOTER */
+footer {
+  margin-top: 6rem;
+  padding: 3rem 0;
+  background-color: var(--alternateBG);
+}
+.footer-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+.flex-item {
+  flex: 1 1 auto;
+  color: var(--primaryBG);
+  line-height: 1.5;
+}
+.flex-item > h2 {
+  margin-bottom: 1rem;
+  font-family: var(--title-2);
+  font-size: 2rem;
+  font-weight: 700;
+}
+.flex-item p {
+  font-size: 1.3rem;
 }
