added[rating]: functionality
+ hover: bgc
+ cursor: pointer

--- a/newbie/interactive-rating-component-main/css/interactive-rating-component-main.css
+++ b/newbie/interactive-rating-component-main/css/interactive-rating-component-main.css
@@ -45,8 +45,9 @@ section {
 .card {
   width: 375px;
   min-width: 375px;
-  padding: 20px;
+  padding: 30px;
   color: var(--primaryTextColor);
+  font-size: 1.3rem;
   border-radius: 30px;
   background-color: var(--secondaryBG);
 }
@@ -76,13 +77,30 @@ section {
   justify-content: space-between;
   align-items: center;
 }
+.card-rating li:hover {
+  color: var(--white);
+  cursor: pointer;
+  background-color: var(--alternateBG);
+}
+.card-rating li:visited {
+  background-color: var(--lightgrey);
+}
 button {
   width: 100%;
   height: 50px;
   margin-top: 30px;
+  color: var(--white);
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.7px;
+  cursor: pointer;
   border: none;
   border-radius: 50px;
   background-color: var(--alternateBG);
+}
+button:hover {
+  color: var(--alternateBG);
+  background-color: var(--white);
 }
 /* Frontend Mentor Clases */
 .attribution {
