--- a/newbie/interactive-rating-component-main/css/interactive-rating-component-main.css
+++ b/newbie/interactive-rating-component-main/css/interactive-rating-component-main.css
@@ -6,12 +6,14 @@
 
   /* Background Colors */
   --primaryBG: #121417;
-  --secondaryBG: #252b37;
+  --secondaryBG: #212832;
+  /* --secondaryBG: #252b37; */
   --tertiaryBG: #2a333b;
   --alternateBG: #fb7518;
 
   /* Font Colors */
-  --primaryTextColor: #7c8798;
+  --primaryTextColor: #a3b1c4;
+  /* --primaryTextColor: #7c8798; */
   --secondaryTextColor: #eee;
 
   /* Typograpy */
@@ -38,7 +40,7 @@ body {
   text-align: center;
 }
 /* main */
-section {
+main {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -47,7 +49,8 @@ section {
   flex-direction: column;
 }
 .card {
-  width: 375px;
+  width: 410px;
+  /* height: 410px; */
   min-width: 375px;
   padding: 30px;
   color: var(--primaryTextColor);
@@ -57,8 +60,8 @@ section {
 }
 .card-star,
 .card-rating li {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,17 +69,22 @@ section {
   background-color: var(--tertiaryBG);
 }
 .card-title {
-  margin-top: 20px;
+  margin-top: 37px;
   color: var(--white);
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 700;
 }
 .card-text {
-  margin-top: 10px;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  font-weight: 600;
+
   line-height: 1.5;
 }
+.card-rating {
+  margin-top: 30px;
+}
 .card-rating ul {
-  margin-top: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -117,7 +125,7 @@ button {
   background-color: var(--alternateBG);
 }
 button:hover {
-  color: var(--alternateBG);
+  color: var(--white);
   background-color: var(--white);
 }
 /* Frontend Mentor Clases */
