--- a/projects/1-newbie/skilled-landing-page/scss/_index.scss
+++ b/projects/1-newbie/skilled-landing-page/scss/_index.scss
@@ -1,3 +1,46 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 html {
   font-size: 62.5%;
+  min-width: 375px;
+}
+body {
+  font-family: $plus-jakarta-sans;
+  font-size: 1.6rem;
+}
+
+// CSS: Global
+.container {
+  width: 90%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 80%;
+  }
+}
+
+// CSS: Header
+header {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  button {
+    width: 140px;
+    height: 48px;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    font-size: 1.6rem;
+    font-weight: 700;
+    background-color: $blue;
+  }
 }
