fixed: [Button] font-family

--- a/projects/1-newbie/skilled-landing-page/css/global.css
+++ b/projects/1-newbie/skilled-landing-page/css/global.css
@@ -44,6 +44,7 @@ header button {
   border: none;
   border-radius: 30px;
   color: white;
+  font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 1.6rem;
   font-weight: 700;
   background-color: #13183f;
