--- a/projects/1-newbie/skilled-landing-page/scss/_index.scss
+++ b/projects/1-newbie/skilled-landing-page/scss/_index.scss
@@ -44,6 +44,7 @@ header {
     border: none;
     border-radius: 30px;
     color: white;
+    font-family: $plus-jakarta-sans;
     font-size: 1.6rem;
     font-weight: 700;
     background-color: $blue;
