added: Section [main-text] Image for Home Langing Page

--- a/projects/1-newbie/skilled-landing-page/css/global.css
+++ b/projects/1-newbie/skilled-landing-page/css/global.css
@@ -61,6 +61,7 @@ main .main-text h1 {
 }
 main .main-text p {
   margin-top: 20px;
+  margin-bottom: 16px;
   color: #83869a;
   font-weight: 500;
   line-height: 26px;
