--- a/projects/1-newbie/skilled-landing-page/css/global.css
+++ b/projects/1-newbie/skilled-landing-page/css/global.css
@@ -50,23 +50,23 @@ header button {
   background-color: #13183f;
 }
 
-main .main-text {
+main .intro-mobile {
   margin-top: 15px;
 }
-main .main-text h1 {
+main .intro-mobile h1 {
   color: #13183f;
   font-weight: 800;
   font-size: 4rem;
   line-height: 50px;
 }
-main .main-text p {
+main .intro-mobile p {
   margin-top: 20px;
   margin-bottom: 16px;
   color: #83869a;
   font-weight: 500;
   line-height: 26px;
 }
-main .main-text button {
+main .intro-mobile button {
   margin-top: 24px;
   width: 140px;
   height: 48px;
@@ -77,4 +77,69 @@ main .main-text button {
   font-size: 1.6rem;
   font-weight: 700;
   background-image: linear-gradient(180deg, #ff6f48 0.04%, #f02aa6 100%);
+}
+main .intro-mobile figure.intro-img {
+  height: 386px;
+  width: 100%;
+  margin: auto;
+  background-image: url(../images/image-hero-mobile.webp);
+  background-position: center;
+  background-size: 435px 409px;
+  background-repeat: no-repeat;
+}
+
+main .intro-tablet {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  main .intro-mobile {
+    display: none;
+  }
+  main .intro-tablet {
+    margin-top: 50px;
+    display: flex;
+  }
+  main .intro-tablet .intro-tablet-text {
+    width: 60%;
+  }
+  main .intro-tablet .intro-tablet-text h1 {
+    color: #13183f;
+    font-weight: 800;
+    font-size: 2.9rem;
+    line-height: 1.3;
+  }
+  main .intro-tablet .intro-tablet-text p {
+    margin-top: 20px;
+    color: #83869a;
+    font-weight: 500;
+    font-size: 1.45rem;
+    line-height: 1.5;
+  }
+  main .intro-tablet .intro-tablet-text button {
+    margin-top: 15px;
+    width: 140px;
+    height: 48px;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-size: 1.6rem;
+    font-weight: 700;
+    background-image: linear-gradient(180deg, #ff6f48 0.04%, #f02aa6 100%);
+  }
+  main .intro-tablet .intro-tablet-image {
+    height: 5vh;
+    border: 1px solid red;
+  }
+  main .intro-tablet .intro-tablet-image figure.intro-img {
+    position: absolute;
+    top: -125px;
+    right: 0px;
+    width: 50%;
+    height: 100vh;
+    background-image: url(../images/image-hero-tablet.webp);
+    background-repeat: no-repeat;
+    border: 1px solid green;
+  }
 }/*# sourceMappingURL=global.css.map */
