--- a/projects/1-newbie/skilled-landing-page/css/global.css
+++ b/projects/1-newbie/skilled-landing-page/css/global.css
@@ -99,9 +99,13 @@ main .intro-tablet {
   main .intro-tablet {
     margin-top: 50px;
     display: flex;
+    justify-content: space-between;
+    border: 1px solid red;
   }
   main .intro-tablet .intro-tablet-text {
-    width: 60%;
+    width: 55%;
+    margin-left: 30px;
+    border: 1px solid green;
   }
   main .intro-tablet .intro-tablet-text h1 {
     color: #13183f;
@@ -129,17 +133,16 @@ main .intro-tablet {
     background-image: linear-gradient(180deg, #ff6f48 0.04%, #f02aa6 100%);
   }
   main .intro-tablet .intro-tablet-image {
-    height: 5vh;
-    border: 1px solid red;
+    width: 45%;
+    position: absolute;
+    top: -50px;
+    right: -50px;
   }
   main .intro-tablet .intro-tablet-image figure.intro-img {
-    position: absolute;
-    top: -125px;
-    right: 0px;
-    width: 50%;
     height: 100vh;
     background-image: url(../images/image-hero-tablet.webp);
     background-repeat: no-repeat;
-    border: 1px solid green;
+    background-size: cover;
+    border: 1px solid blue;
   }
 }/*# sourceMappingURL=global.css.map */
