--- a/projects/1-newbie/nft-preview-card-component-main/style/style.css
+++ b/projects/1-newbie/nft-preview-card-component-main/style/style.css
@@ -1,6 +1,6 @@
 :root {
   /* Widths */
-  --mobile: 375px;
+  --mobile: 300px;
   --desktop: 1440px;
 
   /* COLORS: Primary */
@@ -38,18 +38,22 @@ body {
   background-color: var(--very-dark-blue-cardBG);
   box-shadow: 0px 0px 21px 10px rgba(0, 0, 0, 0.12);
 }
+.card-img img,
+.card-content h1,
+.card-content p {
+  margin-bottom: 20px;
+}
 .card-img img {
   width: 100%;
-  margin-bottom: 20px;
   border-radius: 10px;
 }
 .card-content h1 {
   color: var(--white);
   font-weight: 600;
   font-size: 22px;
-  margin-bottom: 20px;
 }
 .card-content p {
   color: var(--soft-blue);
   font-weight: 300;
+  line-height: 1.4;
 }
