--- a/projects/1-newbie/nft-preview-card-component-main/style/style.css
+++ b/projects/1-newbie/nft-preview-card-component-main/style/style.css
@@ -24,6 +24,7 @@
 body {
   margin: 0;
   padding: 0;
+  color: var(--soft-blue);
   box-sizing: border-box;
   font-family: var(--outfit-font);
   font-size: var(--paragraph);
@@ -53,7 +54,20 @@ body {
   font-size: 22px;
 }
 .card-content p {
-  color: var(--soft-blue);
   font-weight: 300;
   line-height: 1.4;
+}
+.card-info {
+  display: flex;
+  padding-bottom: 20px;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--very-dark-blue-line);
+  border: 1px solid red;
+}
+.card-info-left {
+  color: var(--cyan);
+  border: 1px solid green;
+}
+.card-info-right {
+  border: 1px solid white;
 }
