--- a/projects/1-newbie/nft-preview-card-component-main/style/style.css
+++ b/projects/1-newbie/nft-preview-card-component-main/style/style.css
@@ -59,10 +59,19 @@ body {
   line-height: 1.4;
 }
 .card-info {
-  display: flex;
   padding-bottom: 20px;
+  display: flex;
   justify-content: space-between;
   border-bottom: 1px solid var(--very-dark-blue-line);
+}
+.card-info-left,
+.card-info-right {
+  display: flex;
+  align-items: center;
+}
+.card-info-left img,
+.card-info-right img {
+  margin-right: 5px;
 }
 .card-info-left {
   color: var(--cyan);
