--- a/projects/1-newbie/nft-preview-card-component-main/style/style.css
+++ b/projects/1-newbie/nft-preview-card-component-main/style/style.css
@@ -35,6 +35,7 @@ body {
   width: var(--mobile);
   margin: 30px auto;
   padding: 20px;
+  position: relative;
   border-radius: 20px;
   background-color: var(--very-dark-blue-cardBG);
   box-shadow: 0px 0px 21px 10px rgba(0, 0, 0, 0.12);
